# FinLLM

./: .env.example  .gitignore  CODEOWNERS  Makefile  README.md  codecov.yml  docker-compose.yml
.claude/: settings.local.json
.github/: branch-protection-policy.md
.github/workflows/: backend-tests.yml  docker-build.yml  frontend-tests.yml  security-scan.yml
backend/: Dockerfile  alembic.ini  create_demo_user.py  pyproject.toml  seed.py  seed_user.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: config.py  database.py  main.py
backend/app/api/v1/: auth.py  chat.py  documents.py  router.py
backend/app/core/: dependencies.py  security.py
backend/app/models/: __init__.py  conversation.py  document.py  user.py
backend/app/repositories/: conversation_repo.py  document_repo.py  user_repo.py
backend/app/schemas/: conversation.py  document.py  user.py
backend/app/services/: auth_service.py  document_service.py  embedding_service.py  generation_service.py  retrieval_service.py
backend/tests/: conftest.py  test_auth.py  test_documents.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(app)/: layout.tsx  page.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatWorkspace.tsx  CitationChip.tsx  MessageItem.tsx  (+2 more)
frontend/src/hooks/: use-auth.ts  use-conversations.ts  use-documents.ts  use-stream.ts
frontend/src/lib/: api-client.ts  stream-parser.ts  types.ts  utils.ts
frontend/src/stores/: auth-store.ts  chat-store.ts  ui-store.ts
(+17 files in other folders)
